--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -24,12 +24,12 @@
   justify-content: space-between;
 }
 
-.header-list a {
+.header-list1, .header-list2,.header-list3, .header-list4, .header-list5 {
   text-decoration: none;
   color: ivory;
   font-size: 18px;
 }
 
-.login {
+.header-list4 {
   margin-left: 175px;
 }
