--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -4,6 +4,9 @@
     <% if @profile.present? %>
       <%= render partial: "profile", locals: { user: @user, profile: @profile } %>
     <% else %>
+      <div class="profile-nickname"><%= @user.nickname %>さんのプロフィール</div>
+    <% end %>
+    <% if @profile.nil? && current_user.id == @user.id %>
       <div class="profile-btn"><%= link_to "プロフィールを登録する", new_profile_path(user_id: current_user) %></div>
     <% end %>
   </div>
