--- a/app/views/likes/index.html.erb
+++ b/app/views/likes/index.html.erb
@@ -7,7 +7,9 @@
         <% if like.post.hidden_check %>
         <div class="post-hidden-list">
           <div class="post-upper">
-            <div class="post-upper-title"><%= like.post.book.title %></div>
+            <div class="post-upper-title">
+              <%= link_to like.post.book.title, book_path(like.post.book, user_id: like.post.book.user) %>
+            </div>
             <div class="post-upper-author"><%= like.post.book.author %></div>
           </div>
           <div class="post-hidden"><%= link_to "読書メモを表示する", post_path(like.post) %></div>
@@ -15,13 +17,17 @@
             <div id="like-btn<%= like.post.id %>", class="post-under-like">
               <%= render partial: "likes/like", locals: { post: like.post } %>
             </div>
-            <div class="post-under-nickname"><%= like.post.book.user.nickname %></div>
+            <div class="post-under-nickname">
+              <%= link_to like.post.book.user.nickname, books_path(user_id: like.post.book.user) %>
+            </div>
           </div>
         </div>
       <% else %>
         <div class="post-list">
           <div class="post-upper">
-            <div class="post-upper-title"><%= like.post.book.title %></div>
+            <div class="post-upper-title">
+              <%= link_to like.post.book.title, book_path(like.post.book, user_id: like.post.book.user) %>
+            </div>
             <div class="post-upper-author"><%= like.post.book.author %></div>
           </div>
           <div class="post-memo"><%= link_to like.post.memo, post_path(like.post) %></div>
@@ -32,7 +38,9 @@
             <% if like.post.page.present? %>
               <div class="post-under-page"><%= like.post.page %>ページ</div>
             <% end %>
-            <div class="post-under-nickname"><%= like.post.book.user.nickname %></div>
+            <div class="post-under-nickname">
+              <%= link_to like.post.book.user.nickname, books_path(user_id: like.post.book.user) %>
+            </div>
           </div>
         </div>
       <% end %>
