--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,5 +1,12 @@
 <div class="another-main-content">
-  <%= render partial: "shared/side_bar", locals: { user: @book.user } %>
+  <div class="side-bar">
+    <ul class="side-lists">
+      <li class="side-list-nickname"><%= @user.nickname %></li>
+      <li class="side-list-select"><%= link_to '読んだ本', books_path(user_id: @user), class: "side-list-select-link" %></li>
+      <li class="side-list"><%= link_to 'プロフィール', profiles_path(user_id: @user), class: "side-list2" %></li>
+      <li class="side-list"><%= link_to 'いいね', likes_path(user_id: @user), class: "side-list3" %></li>
+    </ul>
+  </div>
   <div class="right-content">
     <div class="form">
       <div class="form-text">本を編集する</div>
