サイドバーのJavaScriptの適用

--- a/app/assets/stylesheets/shared/side_bar.css
+++ b/app/assets/stylesheets/shared/side_bar.css
@@ -44,7 +44,7 @@
   margin-bottom: 35px;
 }
 
-.side-list1, .side-list2, .side-list3 {
+.side-item1, .side-item2, .side-item3 {
   text-decoration: none;
   font-size: 18px;
   color: #004F2A;
