--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,7 @@
 <header>
   <div class="header-content">
     <div class="logo">
-      <%= link_to 'BookTags', root_path %>
+      <%= link_to 'BookTags', root_path, id: "logo" %>
     </div>
     <div>
       <ul class='lists-right'>
