booksコントローラーのindexアクションとshowアクションのJavaScriptの適用

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -14,7 +14,7 @@
         <div class="book-list">
           <div class="book-information">
             <div class="book-information-title">
-              <%= link_to book.title, book_path(book, user_id: @user) %>
+              <%= link_to book.title, book_path(book, user_id: @user), id: "book_title#{book.id}" %>
             </div>
             <div class="book-information-author"><%= book.author %></div>
           </div>
@@ -22,11 +22,11 @@
             <% book.posts.order("created_at DESC").first(3).each do |post| %>
               <% if post.hidden_check %>
                 <div class="book-post-list">
-                  <div class="book-post-hidden"><%= link_to "読書メモを表示する", post_path(post) %></div>
+                  <div class="book-post-hidden"><%= link_to "読書メモを表示する", post_path(post), id: "post_memo#{post.id}" %></div>
                 </div>
               <% else %>
                 <div class="book-post-list">
-                  <div class="book-post-memo"><%= link_to post.memo, post_path(post) %></div>
+                  <div class="book-post-memo"><%= link_to post.memo, post_path(post), id: "post_memo#{post.id}" %></div>
                   <% if post.page.present? %>
                     <div class="book-post-page"><%= post.page %>ページ</div>
                   <% end %>
