--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -14,7 +14,8 @@
 .logo a {
   text-decoration: none;
   color: ivory;
-  font-size: 25px;
+  font-size: 35px;
+  font-family: 'Karla', sans-serif;
 }
 
 .lists-right {
