--- a/app/assets/stylesheets/post/new.css
+++ b/app/assets/stylesheets/post/new.css
@@ -33,6 +33,12 @@
   margin-top: 20px;
 }
 
+.fields {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .field {
   margin-top: 30px;
 }
