--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -2,50 +2,53 @@
   <div class="form">
     <div class="form-text">本を登録する</div>
     <%= form_with model: @book, local: true do |f| %>
-      <div class="field">
-        <div class="text">
-          タイトル(必須)
+      <%= render 'shared/error_messages', model: f.object %>
+      <div class="fields">
+        <div class="field">
+          <div class="text">
+            タイトル(必須)
+          </div>
+          <%= f.text_field :title, placeholder:"タイトル", class: "form-field" %>
         </div>
-        <%= f.text_field :title, placeholder:"タイトル", class: "form-field" %>
-      </div>
-      <div class="field">
-        <div class="text">
-          編著者(必須)
+        <div class="field">
+          <div class="text">
+            編著者(必須)
+          </div>
+          <%= f.text_field :author, placeholder:"編著者", class: "form-field" %>
         </div>
-        <%= f.text_field :author, placeholder:"編著者", class: "form-field" %>
-      </div>
-      <div class="field">
-        <div class="text">
-          訳者
+        <div class="field">
+          <div class="text">
+            訳者
+          </div>
+          <%= f.text_field :translator, placeholder:"訳者", class: "form-field" %>
         </div>
-        <%= f.text_field :translator, placeholder:"訳者", class: "form-field" %>
-      </div>
-      <div class="field">
-        <div class="text">
-          出版社
+        <div class="field">
+          <div class="text">
+            出版社
+          </div>
+          <%= f.text_field :publisher, placeholder:"出版社", class: "form-field" %>
         </div>
-        <%= f.text_field :publisher, placeholder:"出版社", class: "form-field" %>
-      </div>
-      <div class="field">
-        <div class="text">
-          出版年
+        <div class="field">
+          <div class="text">
+            出版年
+          </div>
+          <%= f.text_field :publish_year, placeholder:"出版年", class: "form-field" %>
         </div>
-        <%= f.text_field :publish_year, placeholder:"出版年", class: "form-field" %>
-      </div>
-      <div class="field">
-        <div class="text">
-          総ページ数(半角数字)
+        <div class="field">
+          <div class="text">
+            総ページ数(半角数字)
+          </div>
+          <%= f.text_field :total_page, placeholder:"総ページ数", class: "form-field" %>
         </div>
-        <%= f.text_field :total_page, placeholder:"総ページ数", class: "form-field" %>
-      </div>
-      <div class="field">
-        <div class="text">
-          読書開始日
+        <div class="field">
+          <div class="text">
+            読書開始日
+          </div>
+          <%= f.date_field :start_date, class: "form-field" %>
         </div>
-        <%= f.date_field :start_date, class: "form-field" %>
-      </div>
-      <div class="form-under">
-        <%= f.submit "登録する" ,class:"contribute-btn" %>
+        <div class="form-under">
+          <%= f.submit "登録する" ,class:"contribute-btn" %>
+        </div>
       </div>
     <% end %>
   </div>
