文言の修正

--- a/app/views/profiles/_profile.html.erb
+++ b/app/views/profiles/_profile.html.erb
@@ -19,7 +19,7 @@
       <% end %>
   </div>
   <div class="profile-element">
-    <div class="profile-left-text">好きな本</div>
+    <div class="profile-left-text">好きな著者</div>
     <% if profile.favorite_author1.present? %>
       <div class="profile-right-text"><%= profile.favorite_author1 %></div>
     <% end %>
