--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -29,7 +29,9 @@
       <div id="like-btn<%= post.id %>", class="post-under-like">
         <%= render partial: "likes/like", locals: { post: post } %>
       </div>
-      <% if post.page.present? %>
+      <% if post.book.total_page.present? && post.page.present? %>
+        <div class="post-under-page"><%= post.page %>/<%= post.book.total_page %>ページ</div>
+      <% elsif post.page.present? %>
         <div class="post-under-page"><%= post.page %>ページ</div>
       <% end %>
       <div class="post-under-nickname">
