--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,7 +12,9 @@
       <div id="like-btn<%= @post.id %>", class="post-detail-under-like">
         <%= render partial: "likes/like", locals: { post: @post } %>
       </div>
-        <% if @post.page.present? %>
+        <% if @post.book.total_page.present? && @post.page.present? %>
+          <div class="post-detail-page"><%= @post.page %>/<%= @post.book.total_page %>ページ</div>
+        <% elsif @post.page.present? %>
           <div class="post-detail-page"><%= @post.page %>ページ</div>
         <% end %>
         <div class="post-detail-time"><%= l @post.created_at %></div>
