--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -23,15 +23,25 @@
               <% if post.hidden_check %>
                 <div class="book-post-list">
                   <div class="book-post-hidden"><%= link_to "読書メモを表示する", post_path(post), id: "post_index_memo#{post.id}" %></div>
+                  <div class="post-under">
+                    <div id="like-btn<%= post.id %>", class="post-under-like">
+                      <%= render partial: "likes/like", locals: { post: post } %>
+                    </div>
+                  </div>
                 </div>
               <% else %>
                 <div class="book-post-list">
                   <div class="book-post-memo"><%= link_to post.memo, post_path(post), id: "post_index_memo#{post.id}" %></div>
-                  <% if book.total_page.present? && post.page.present? %>
-                    <div class="book-post-page"><%= post.page %>/<%= book.total_page %>ページ</div>
-                  <% elsif post.page.present? %>
-                    <div class="book-post-page"><%= post.page %>ページ</div>
-                  <% end %>
+                  <div class="post-under">
+                    <div id="like-btn<%= post.id %>", class="post-under-like">
+                      <%= render partial: "likes/like", locals: { post: post } %>
+                    </div>
+                    <% if book.total_page.present? && post.page.present? %>
+                      <div class="book-post-page"><%= post.page %>/<%= book.total_page %>ページ</div>
+                    <% elsif post.page.present? %>
+                      <div class="book-post-page"><%= post.page %>ページ</div>
+                    <% end %>
+                  </div>
                 </div>
               <% end %>
             <% end %>
