--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,9 +9,12 @@
       </div>
       <div class="post-detail-memo"><%= @post.memo %></div>
       <div class="post-detail-under">
-      <div id="like-btn<%= @post.id %>", class="post-detail-under-like">
-        <%= render partial: "likes/like", locals: { post: @post } %>
-      </div>
+        <div id="like-btn<%= @post.id %>", class="post-detail-under-like">
+          <%= render partial: "likes/like", locals: { post: @post } %>
+        </div>
+        <% if @post.likes.present? %>
+          <div class="like-count"><%= @post.likes.count %>いいね</div>
+        <% end %>
         <% if @post.book.total_page.present? && @post.page.present? %>
           <div class="post-detail-page"><%= @post.page %>/<%= @post.book.total_page %>ページ</div>
         <% elsif @post.page.present? %>
